added center area

--- a/index.html
+++ b/index.html
@@ -6,10 +6,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Repository</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>I am Toukira Himu</h1>
+    <section class="top-section">
+        <div class="half-width">
+            <h1>I am <span>Toukira Himu</span></h1>
+            <h2>I'm learning Web Development</h2>
+            <p>Welcome to my personal portfolio website where i put all my work related to designs and many more.Welcome
+                to my
+                personal portfolio website where i put all my work related to designs and many more.</p><br>
+            <a class="ankor-tag" href="#">Download CV</a>
+
+        </div>
+
+        <div class="half-width">
+            <img src="himu/my-bg (1).png" alt="">
+        </div>
+
+    </section>
+
+    <section class="center-section">
+        <div class="half-width">
+            <img src="himu/my-bg2 (1).png" alt="#">
+        </div>
+
+        <div class="half-width">
+            <h1>I am <span>Mahamudul Hasan</span></h1>
+            <h2>Frontend Developer</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum, eius. Alias eius dolorum, harum quisquam
+                perferendis quia. Rerum, quaerat facere! Alias exercitationem cum nisi fugiat inventore vitae quam ipsum
+                natus, mollitia itaque aspernatur vel voluptates, laboriosam impedit odio nostrum corporis? Repellat ab
+                qui inventore ea veritatis doloremque placeat maxime itaque Ducimus aliquid natus culpa?</p><br>
+            <a class="ankor-tag" href="#">Download CV</a>
+        </div>
+    </section>
+
 </body>
 
 </html>
