--- a/index.html
+++ b/index.html
@@ -46,6 +46,36 @@
         </div>
     </section>
 
+    <section class="footer-section">
+        <h1>Details</h1>
+        <div class="flex-container">
+            <div class="last-width">
+                <h1>Baby web developer</h1>
+                <h2>2020-2021 | Programming Hero Learner</h2>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </div>
+
+            <div class="last-width">
+                <h1>Frontend developer</h1>
+                <h2>2021-Present | Pro Level Developer</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae similique rerum, nulla voluptas iure
+                    officiis molestiae fugiat eaque maiores, labore asperiores deserunt fuga rerum in?</p>
+            </div>
+            <div class="last-width">
+                <h1>backend developer</h1>
+                <h2>2021-Present | Pro Level Developer</h2>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue JS. I even know the deploy</p>
+            </div>
+
+        </div>
+
+
+    </section>
+
 </body>
 
 </html>
